// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisputeStatusChip renders charge_refunded status 1`] = `
<Chip
  isCompact={true}
  message="Charge Refunded"
  type="light"
/>
`;

exports[`DisputeStatusChip renders default appearance if status is unrecognized 1`] = `
<Chip
  isCompact={true}
  message="Mock status"
  type="light"
/>
`;

exports[`DisputeStatusChip renders lost status 1`] = `
<Chip
  isCompact={true}
  message="Lost"
  type="light"
/>
`;

exports[`DisputeStatusChip renders needs_response status 1`] = `
<Chip
  isCompact={true}
  message="Needs Response"
  type="primary"
/>
`;

exports[`DisputeStatusChip renders under_review status 1`] = `
<Chip
  isCompact={true}
  message="Under Review"
  type="light"
/>
`;

exports[`DisputeStatusChip renders warning_closed status 1`] = `
<Chip
  isCompact={true}
  message="Inquiry: Closed"
  type="light"
/>
`;

exports[`DisputeStatusChip renders warning_needs_response status 1`] = `
<Chip
  isCompact={true}
  message="Inquiry: Needs Response"
  type="primary"
/>
`;

exports[`DisputeStatusChip renders warning_under_review status 1`] = `
<Chip
  isCompact={true}
  message="Inquiry: Under Review"
  type="light"
/>
`;

exports[`DisputeStatusChip renders won status 1`] = `
<Chip
  isCompact={true}
  message="Won"
  type="light"
/>
`;
